--- a/vue project/public/index.html
+++ b/vue project/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>weather-app</title>
   </head>
-  <body  style="background: url('../src/assets/weather_ground.jpg') green;">
+  <body  style="background: rebeccapurple">
     <noscript>
       <strong>We're sorry but weather-app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
